# c-libp2p

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE-MIT.md  README.md
.githooks/: pre-push
.github/workflows/: ci-fast.yml  ci-full.yml
docs/: building.md  examples.md  identify.md  multiaddress.md  overview.md  peer-id.md  ping.md  transports.md  upgrading.md
examples/: connection_lifecycle.c  flow_control.c  identify_v2.c  metrics.c  ping_v2.c  unified_echo.c
gossip-tests/: Dockerfile
include/libp2p/: cancel.h  component_registry.h  conn_manager.h  debug_trace.h  dial.h  error_map.h  errors.h  event_poll.h  events.h  host.h  host_builder.h  identify.h  io.h  log.h  lpmsg.h  metrics.h  muxer.h  muxer_mplex.h  muxer_yamux.h  noise_debug.h  peer.h  peerstore.h  protocol.h  protocol_dial.h  protocol_introspect.h  protocol_listen.h  protocol_match.h  runtime.h  security.h  security_noise.h  security_tls.h  stream.h  stream_internal.h  transport.h
include/libp2p/crypto/: ltc_compat.h
include/multiformats/cid/: cid_v0.h  cid_v1.h
include/multiformats/multiaddr/: multiaddr.h
include/multiformats/multicodec/: multicodec_table.h
include/multiformats/multihash/: multihash.h
include/multiformats/unsigned_varint/: unsigned_varint.h
include/peer_id/: peer_id.h  peer_id_ecdsa.h  peer_id_ed25519.h  peer_id_proto.h  peer_id_rsa.h  peer_id_secp256k1.h
include/protocol/gossipsub/: gossipsub.h  message.h
include/protocol/identify/: protocol_identify.h
include/protocol/multiselect/: protocol_multiselect.h
include/protocol/noise/: protocol_noise.h  protocol_noise_conn.h  protocol_noise_extensions.h
include/protocol/ping/: protocol_ping.h
include/protocol/quic/: protocol_quic.h
include/protocol/tcp/: protocol_tcp.h  protocol_tcp_conn.h  protocol_tcp_poller.h  protocol_tcp_queue.h  protocol_tcp_util.h
include/security/: security.h
include/transport/: conn_util.h  connection.h  listener.h  muxer.h  transport.h  upgrader.h
include/util/: memory.h  net_addr.h
interop-tests/: Dockerfile
interop-tests/transport/: Dockerfile
scripts/: run_transport_interop.sh
scripts/ci/: check-linux-smoke.sh  check-macos-smoke.sh  cppcheck-misra-suppressions.txt
scripts/dev/: install-hooks.sh  run-fast-lane-local.sh
src/host/: callback_exec.c  component_registry.c  conn_pool.c  conn_pool.h  events_bus.c  host_builder.c  host_core.c  host_dial.c  host_events.c  host_internal.h  host_introspect.c  host_listen.c  host_ping_limits.c  host_registry.c  host_upgrader_helpers.c  proto_select.c  proto_select_internal.h  publish_service.c
src/interop/: interop.c
src/interop/gossipsub/: gossipsub_interop.c  jsmn.c  jsmn.h
src/multiformats/cid/: cid_v0.c  cid_v1.c
src/multiformats/multiaddr/: multiaddr.c
src/multiformats/multibase/: multibase.c
src/multiformats/multicodec/: multicodec.c  multicodec_table.c
src/multiformats/multihash/: multihash.c  sha3_compat.h
src/multiformats/unsigned_varint/: unsigned_varint.c
src/muxer/: muxer_public.c
src/peer_id/: peer_id.c  peer_id_ecdsa.c  peer_id_ed25519.c  peer_id_internal.h  peer_id_keyops.c  peer_id_parse_text.c  peer_id_proto.c  peer_id_rsa.c  peer_id_secp256k1.c
src/protocol/identify/: identify_public.c  identify_service.c  protocol_identify.c
src/protocol/multiselect/: protocol_multiselect.c
src/protocol/noise/: protocol_noise.c  protocol_noise_conn.c  protocol_noise_extensions.c  protocol_noise_multiselect.c
src/protocol/ping/: protocol_ping.c
src/protocol/quic/: protocol_quic.c  quic_conn.c  quic_internal.h  quic_listener.c  quic_listener.h  quic_muxer.c  quic_tls.c
src/protocol/tcp/: protocol_tcp.c  protocol_tcp_conn.c  protocol_tcp_dial.c  protocol_tcp_listen.c  protocol_tcp_poller.c  protocol_tcp_queue.c  protocol_tcp_util.c
src/runtime/: runtime.c
src/security/: security_public.c
src/stream/: io_adapter.c  stream.c
src/transport/: conn_util.c  transport_public.c  upgrader.c
src/util/: debug_trace.c  error_map.c  log.c  lpmsg.c  managers.c  memory.c  metrics.c  net_addr.c  peerstore.c
standards/: rewrite-pilot-6-peer-id.md
tests/host/: identify_test_utils.h  test_conn_manager_outbound_limits.c  test_dial_cancellable.c  test_event_deepcopy_free.c  test_host_events_dial_errors.c  test_host_events_listen_and_stop.c  test_host_events_success_flow.c  test_host_identity.c  test_host_perproto_limits.c  test_host_server_opts_validation.c  test_identify_control_api.c  test_identify_push_publish.c  test_identify_push_reception.c  test_proto_select_semver_parsing.c  test_proto_select_semver_scope.c  test_protocol_ls_errors.c  test_quic_host_dial_upgrade.c  test_quic_host_stream_exchange.c  test_quic_incoming_error_events.c  test_quic_listener_accept.c  test_quic_stream_loopback.c  test_quic_upgrade_outbound.c
tests/interop-tests/: Dockerfile
tests/multiformats/cid/: test_cid_v0.c  test_cid_v1.c
tests/multiformats/multiaddr/: test_multiaddr.c
tests/multiformats/multibase/: test_multibase.c
tests/multiformats/multicodec/: test_multicodec.c
tests/multiformats/multihash/: test_multihash.c
tests/multiformats/unsigned_varint/: test_unsigned_varint.c
tests/peer_id/: test_peer_id.c
tests/protocol/gossipsub/: test_gossipsub_cache.c  test_gossipsub_proto.c  test_gossipsub_service.c  test_gossipsub_service_cleanup.c  test_gossipsub_service_common.c  test_gossipsub_service_common.h  test_gossipsub_service_explicit.c  test_gossipsub_service_heartbeat.c  test_gossipsub_service_px.c  test_gossipsub_service_scoring.c  test_gossipsub_service_setup.c  test_gossipsub_service_subscription_mesh.c  test_gossipsub_validation.c
tests/protocol/identify/: test_identify_multiaddr_wire.c  test_protocol_identify_roundtrip.c
tests/protocol/multiselect/: test_protocol_multiselect.c  test_protocol_multiselect_io.c
tests/protocol/noise/: test_protocol_noise.c
tests/protocol/ping/: test_ping_dial.c  test_protocol_ping.c
tests/transport/: test_upgrader.c
tests/util/: test_lpmsg_io.c  test_metrics_basic.c  test_peerstore.c
(+74 files in other folders)
